# Salesforce-MCP-UI-Automation

./: .env.example  .gitignore  README.md  mcp.example.json  pyproject.toml
docs/changelogs/: 2026-06-21_datacloud_api_registry.md  2026-06-21_playwright_auth_bridge.md  2026-06-21_salesforce_mcp_initial.md  2026-06-21_supervised_operator_mvp.md
docs/reports/: REQ_001_2026-06-21.md  REQ_002_2026-06-21.md  REQ_003_2026-06-21.md  REQ_004_2026-06-21.md
salesforce_mcp/: __init__.py  api_client.py  assertions.py  auth.py  browser.py  config.py  execution.py  guardrails.py  journal.py  output.py  server.py  workflows.py
tests/: test_api_client.py  test_assertions.py  test_auth.py  test_browser_smoke.py  test_config.py  test_execution.py  test_guardrails.py  test_output.py
wiki/: index.md  log.md
wiki/analysis/: REQ_001_Integrazioni_API.md  REQ_002_Integrazioni_API.md  REQ_003_Integrazioni_API.md  REQ_004_Integrazioni_API.md
wiki/automations/: REQ_001_Automazioni.md  REQ_002_Automazioni.md  REQ_003_Automazioni.md
wiki/implementations/: REQ_001_implementazione.md  REQ_002_implementazione.md  REQ_003_implementazione.md  REQ_004_implementazione.md
wiki/overviews/: Salesforce_MCP_UI_Automation.md
wiki/releases/: REQ_001_Changelog_e_rilascio.md  REQ_002_Changelog_e_rilascio.md  REQ_003_Changelog_e_rilascio.md  REQ_004_Changelog_e_rilascio.md
wiki/requests/: REQ_001_richiesta.md  REQ_002_richiesta.md  REQ_003_richiesta.md  REQ_004_richiesta.md
wiki/requirements/: REQ_001_Requisiti.md  REQ_002_Requisiti.md  REQ_003_Requisiti.md  REQ_004_Requisiti.md
(+4 files in other folders)
