[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salesforce-mcp-ui-automation"
version = "0.1.0"
description = "MCP server for Salesforce UI automation with persistent Playwright sessions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.48.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
salesforce-mcp = "salesforce_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["salesforce_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
